docs-archive/apache-airflow/2.2.4/_sources/_api/airflow/executors/executor_loader/index.rst.txt
:py:mod:`airflow.executors.executor_loader`
===========================================

.. py:module:: airflow.executors.executor_loader

.. autoapi-nested-parse::

   All executors.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.executors.executor_loader.ExecutorLoader




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.executors.executor_loader.log
   airflow.executors.executor_loader.UNPICKLEABLE_EXECUTORS


.. py:data:: log
   

   

.. py:class:: ExecutorLoader

   Keeps constants for all the currently available executors.

   .. py:attribute:: executors
      

      

   .. py:method:: get_default_executor(cls) -> airflow.executors.base_executor.BaseExecutor
      :classmethod:

      Creates a new instance of the configured executor if none exists and returns it


   .. py:method:: load_executor(cls, executor_name: str) -> airflow.executors.base_executor.BaseExecutor
      :classmethod:

      Loads the executor.

      This supports the following formats:
      * by executor name for core executor
      * by ``{plugin_name}.{class_name}`` for executor from plugins
      * by import path.

      :return: an instance of executor class via executor_name



.. py:data:: UNPICKLEABLE_EXECUTORS
   

   

